[gd_scene load_steps=18 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://LoadingBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/JoystickKnob.svg" type="Texture" id=4]
[ext_resource path="res://art/JoystickRing.svg" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/04b_30/04B_30__.TTF"

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/04b_30/04B_30__.TTF"

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/04b_30/04B_30__.TTF"

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://fonts/04b_30/04B_30__.TTF"

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/04b_30/04B_30__.TTF"

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://fonts/04b_30/04B_30__.TTF"

[sub_resource type="DynamicFont" id=13]
size = 25
font_data = SubResource( 12 )

[sub_resource type="RectangleShape2D" id=9]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameInfo" type="Label" parent="."]
margin_top = 104.0
margin_right = 480.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 2 )
text = "You can Shoot them if you need it...
 but the reload takes long..
 use your shoots wisely"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 217.5
margin_right = 262.5
margin_bottom = 81.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
margin_top = 238.5
margin_right = 480.0
margin_bottom = 481.5
custom_fonts/font = SubResource( 6 )
text = "Dodge the creeps!"
align = 1
valign = 1
autowrap = true

[node name="Shoot" type="Label" parent="."]
margin_left = 344.0
margin_top = 518.0
margin_right = 384.0
margin_bottom = 541.0

[node name="Text" type="Label" parent="Shoot"]
margin_left = -39.0
margin_top = -66.0
margin_right = 69.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 11 )
text = "Shoot"

[node name="Shoot" type="Sprite" parent="Shoot"]
position = Vector2( 16, 34 )
scale = Vector2( 0.0398173, 0.0398173 )
texture = ExtResource( 5 )

[node name="button" type="Sprite" parent="Shoot/Shoot"]
scale = Vector2( 1.53223, 1.53223 )
texture = ExtResource( 4 )

[node name="InfoSeparator" type="Label" parent="."]
margin_left = 229.0
margin_top = 512.0
margin_right = 270.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 8 )
text = "-"
align = 1
valign = 1

[node name="Move" type="Label" parent="."]
margin_left = 64.0
margin_top = 462.0
margin_right = 104.0
margin_bottom = 485.0

[node name="Text" type="Label" parent="Move"]
margin_left = 12.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 13 )
text = "Move"

[node name="Ring" type="Sprite" parent="Move"]
position = Vector2( 56, 94 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 5 )
region_filter_clip = true

[node name="Knob" type="Sprite" parent="Move"]
position = Vector2( 56, 94 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 4 )

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LoadingBar" parent="." instance=ExtResource( 2 )]

[node name="PressScreenToStart" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 240, 360 )
scale = Vector2( -23.8165, -35.7581 )
z_index = 10
shape = SubResource( 9 )
shape_centered = false

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="PressScreenToStart" to="." method="_on_PressScreenToStart_pressed"]
